--- a/Daejeon_test/index.html
+++ b/Daejeon_test/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
+    <input type="checkbox" name="" id="nav">
+    <!-- 헤더 영역 -->
     <div class="head_area">
         <div class="sgin_area">
             <input type="text" placeholder="search">
@@ -45,12 +47,50 @@
                     </li>
                 </ul>
             </nav>
-            <div class="ham">
+            <label class="ham" for="nav">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                 </svg>
-            </div>
+            </label>
         </header>
     </div>
+    <!-- 세로 네비게이션 -->
+    <div class="height-nav-area">
+        <div class="nav-back"></div>
+        <div class="height-nav">
+            <label class="close" for="nav">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                    <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
+                </svg>
+            </label>
+            <ul class="menu">
+                <li><a href="#">투어경북</a></li>
+                <li><a href="#">숙박</a>
+                    <ul class="sub sub03">
+                        <li><a href="#">호텔</a></li>
+                        <li><a href="#">펜션</a></li>
+                        <li><a href="#">게스트하우스</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">문화유산</a>
+                    <ul class="sub sub03">
+                        <li><a href="#">세계문화유산</a></li>
+                        <li><a href="#">경주의역사</a></li>
+                        <li><a href="#">분류별유산</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">체험예약 안내</a>
+                    <ul class="sub sub04">
+                        <li><a href="#">체험예약</a></li>
+                        <li><a href="#">관광안내</a></li>
+                        <li><a href="#">주변관광지</a></li>
+                        <li><a href="#">문화재투어</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <!-- 세로 네비게이션 -->
+    <!-- 헤더 영역 -->
 </body>
 </html>
